[FEAT] Rework result paths and clean unused code
