# src/controllers/challenge.js
@@ -1,57 +1,9 @@
-const fs = require('fs');
-
-const Result = require('mongoose').model('Result');
-
 const Category = require('../models/category');
 const Challenge = require('../models/challenge');
 const Language = require('../models/language');
+const Result = require('../models/result');
 const Test = require('../models/test');
 const { readFileAsync, readdirAsync } = require('../utils');
-
-const challenges = [];
-
-const init = function (languages) {
-  const aliases = require('./language').aliases;
-  const path = `${__dirname}/../challenges/descriptions`;
-  return new Promise((complete, fail) => {
-    fs.readdir(path, function (err, files) {
-      if (err) {
-        fail(err);
-      }
-
-      for (const file of files) {
-        const name = file.split('.')[0];
-        const challengeConfig = JSON.parse(fs.readFileSync(`${__dirname}/../challenges/tests/${name}.json`));
-
-        if (challengeConfig.deactivated) {
-          continue;
-        }
-
-        const challenge = {
-          name,
-          content: fs.readFileSync(`${path}/${file}`, 'utf8'),
-          points: challengeConfig.points,
-          category: challengeConfig.category,
-          isCodingChallenge: challengeConfig.isCodingChallenge,
-          blacklist: challengeConfig.blacklist,
-          whitelist: challengeConfig.whitelist,
-          boilerplates: {}
-        };
-
-        for (const language of languages) {
-          for (const alias of aliases(language.name)) {
-            if (challengeConfig[alias]) {
-              challenge.boilerplates[language.name] = challengeConfig[alias];
-              break;
-            }
-          }
-        }
-        challenges.push(challenge);
-      }
-      complete(challenges);
-    });
-  });
-};
 
 const seed = async (ctx) => {
   const added = [];
@@ -199,36 +151,7 @@ const remove = async (ctx) => {
   ctx.status = 200;
 };
 
-const getResult = async function (ctx) {
-  const cip = ctx.state.user.data.cip;
-  const challenge = ctx.params.challenge;
-  const result = await Result.findOne({ cip, challenge });
-  if (result) {
-    ctx.body = { result };
-    ctx.status = 200;
-  } else {
-    ctx.body = { error: 'Result not found' };
-    ctx.status = 404;
-  }
-};
-
-const getResults = async function (ctx) {
-  const cip = ctx.state.user.data.cip;
-  let results = await Result.find({ cip });
-  if (!results) {
-    results = [];
-  }
-
-  ctx.body = { results };
-  ctx.status = 200;
-};
-
 module.exports = {
-  init,
-  getResult,
-  getResults,
-  list: challenges,
-  // NEW API
   create,
   get,
   getAll,
